Modify package.json and style.scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@ body {
 	color: #FFDBAA;
 	background-color: #000F10;
 	font-family: "Libre Baskerville", serif;
+    display: flex;
 }
 .container {
 	background-color: #380100;
